[package]
name = "timepix3"
version = "0.2.0"
authors = ["Ian Anthony"]
edition = "2018"

[lib]
name = "timepix3"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.7"
ndarray = "0.13"
ndarray-stats = "0.3"
rayon = "1.3"
itertools = "0.8.2"

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"